# CodeConn

./: .gitignore  README.md  contrib.md  env.example  env.production.example  env_prod.example  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  supervisord.conf
base_static/global/css/: footer.css  header.css  modal.css  styles.css
base_static/global/js/: image-modal.js  img-show.js  index.js  modal.js  script.js
base_static/projects/css/: all-projects.css  cards.css  home.css  project-detail.css  project-edit.css  project_create.css
base_static/users/css/: admin_dashboard.css  auth.css  idea_detail.css  ideas_admin.css  user-detail.css
base_templates/: 404.html
base_templates/global/: base.html
base_templates/global/partials/: _footer.html  _head.html  _header.html  _messages.html  _modal.html
context_processors/: header.py
custom_storages/: storage_backends.py
ideas/: admin.py  forms.py  models.py  urls.py  views.py
ideas/migrations/: 0001_initial.py
ideas/templates/: idea_detail.html  ideas_admin.html  projects_ideas.html
ideas/tests/: test_ideas_admin.py
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_alter_project_table.py  0003_comment.py  0004_rename_user_comment_author.py  0005_rename_date_updated_comment_updated_at_and_more.py  0006_alter_comment_options_alter_project_options.py  0007_project_link.py  0008_remove_project_description_project_subtitle.py  0009_alter_project_subtitle.py  0010_alter_project_explanatory_text.py  0011_alter_project_explanatory_text.py  0012_project_is_inspired.py  0013_project_stack.py  0014_alter_project_stack.py  0015_alter_project_is_inspired.py  0016_comment_read.py  0017_complaint_project_complaints.py  0017_project_image.py  0018_alter_project_image.py  0018_remove_project_complaints_delete_complaint_and_more.py  0019_project_complaints_notifications.py  0020_alter_project_complaints_and_more.py  0021_alter_project_is_approved.py  0022_alter_project_complaints_and_more.py  0023_merge_20230720_1239.py
projects/tests/: test_all_projects.py  test_home.py  test_make_complaint.py  test_notifications.py  test_project_create.py  test_project_delete.py  test_project_detail.py  test_project_edit.py  test_project_search.py
projeto_x/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  tokens.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_github_user_linkedin.py  0003_projectsdate.py  0004_alter_projectsdate_options_alter_projectsdate_table.py  0005_alter_projectsdate_options_alter_projectsdate_table.py  0006_alter_projectsdate_end_date_and_more.py  0007_projectsideas.py  0008_rename_idea_explanation_projectsideas_explanation_and_more.py  0009_projectsideas_stack.py  0010_alter_projectsideas_level_alter_projectsideas_stack.py  0011_remove_projectsideas_end_date_and_more.py  0012_rename_projectsideas_projectidea_and_more.py  0013_delete_projectidea.py  0014_user_profile_photo.py  0015_alter_user_profile_photo.py  0016_alter_user_date_joined_alter_user_email_and_more.py
users/tests/: test_admin_complaints.py  test_admin_dashboard.py  test_user_forms.py  test_user_model.py  test_user_register_confirmation.py  test_user_views.py
utils/: email_sending.py  forms_utils.py  image.py  stack_index.py  tests_bases.py
(+19 files in other folders)
