[tool.poetry]
name = "projeto-x"
version = "0.1.0"
description = "Gerenciador de projetos para uma organização independente de alunos da Estácio."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "projeto_x"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-environ = "^0.10.0"
parameterized = "^0.9.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "projeto_x.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
