[tool.poetry]
name = "projeto-x"
version = "0.1.0"
description = "Gerenciador de projetos para uma organização independente de alunos da Estácio."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "projeto_x"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-environ = "^0.10.0"
parameterized = "^0.9.0"
six = "^1.16.0"
django-solo = "^2.1.0"
dj-database-url = "^2.0.0"
django-ckeditor = "^6.6.1"
psycopg = "^3.1.9"
django-storages = "^1.13.2"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
boto3 = "^1.27.1"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
pillow = "^10.0.0"
django-cleanup = "^8.0.0"
django-debug-toolbar = "^4.2.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "projeto_x.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
